infrastructure/monitoring/grafana/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: certificates
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
  tls:
    secretName: certificates
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-alertmanager
          port: 9093
  tls:
    secretName: certificates
